add doc, remove optionals from dumb and smart players, improve gameManager